ui stock page updates

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -74,6 +74,7 @@
   <app-viewer
     *ngIf="viewerOpened"
     [viewer]="viewer"
-    (event)="viewerEvent()"
+    (close)="viewerClose()"
+    (slideTo)="viewerSlide($event)"
   ></app-viewer>
 </div>
