--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -2,7 +2,9 @@
   <div class="fullScreen">
     <div class="pix">
       <img src="{{href}}" alt=""/>
-      <div class="close" (click)="close()"></div>
+      <div class="slide left" (click)="slideHandler('left')"></div>
+      <div class="slide right" (click)="slideHandler('right')"></div>
+      <div class="close" (click)="closeHandler()"></div>
     </div>
   </div>
 </div>
