--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -29,9 +29,26 @@
 
       .slide {
         position: absolute;
+        cursor: pointer;
         top: 0;
         height: 100%;
         width: 200px;
+        span {
+          display: none;
+          position: absolute;
+          width: 30px;
+          height: 2px;
+          top: 50%;
+          left: 50%;
+          border-radius: 2px;
+          background: lighten($dark, 10%);
+          &:nth-child(1) {
+            transform: rotate(45deg);
+          }
+          &:nth-child(2) {
+            transform: rotate(-45deg);
+          }
+        }
         &.left {
           left: 0;
         }
@@ -39,7 +56,9 @@
           right: 0;
         }
         &:hover {
-          background: lighten($dark, 10%);
+          span {
+            display: block;
+          }
         }
       }
 
