ui stock page updates

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -73,7 +73,7 @@
 
   <app-viewer
     *ngIf="viewerOpened"
-    [viewer]="viewerPix"
+    [viewerPix]="viewerPix"
     (close)="viewerClose()"
     (slideTo)="viewerSlide($event)"
   ></app-viewer>
