ui stock page updates

--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -13,6 +13,7 @@
     align-items: center;
     flex-direction: column;
     .chart-card {
+      overflow: hidden;
       position: relative;
       display: flex;
       justify-content: flex-start;
@@ -21,7 +22,7 @@
       width: 94%;
       height: 120px;
       border-radius: 14px;
-      padding: 20px;
+      padding: 0 0 0 20px;
       background: radial-gradient(110.3% 95.84% at 56.25% 0%, #4C4C4C 0%, #333333 100%);
       &:hover {
         .cc-preview {
@@ -41,28 +42,35 @@
           display: block;
           width: 100%;
           height: 100%;
-
         }
       }
 
       .cc-info-main {
         display: flex;
+        flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        width: 400px;
+        width: 260px;
+        height: 100%;
         .row {
+          width: 100%;
+          height: 50%;
           position: relative;
           display: flex;
           justify-content: flex-start;
           align-items: center;
           .name {
-            margin-left: 20px;
+            position: absolute;
+            right: 20px;
             font: 900 22px/24px $fontMain;
             color: $background;
           }
           .album-size {
+            position: absolute;
+            right: 20px;
+            bottom: -40px;
             margin-left: 20px;
-            font: 900 142/166px $fontMain;
+            font: 900 92px/100px $fontMain;
             color: $background;
           }
         }
@@ -70,7 +78,9 @@
 
       .cc-preview {
         position: relative;
+        flex: 1;
         width: 100%;
+        height: 100%;
         .preview-block {
           position: absolute;
           display: flex;
@@ -86,23 +96,50 @@
             img {
               width: 100%;
               height: 100%;
-              object-fit: scale-down;
+              object-fit: cover;
               object-position: 50%;
             }
+          }
+          &:after {
+            opacity: .42;
+            position: absolute;
+            display: block;
+            content: '';
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            filter: blur(3px);
+            background: lighten($background, 10%);
           }
         }
         .arrow {
           position: absolute;
           right: -20px;
-          top: 20px;
+          top: 0;
+          width: 160px;
+          height: 100%;
           transition: right 100ms ease;
           span {
+            height: 20px;
             display: block;
             position: absolute;
+            border-radius: 10px;
             color: $background;
-            &:nth-child(1) {}
-            &:nth-child(2) {}
-            &:nth-child(3) {}
+            &:nth-child(1) {
+              width: 100%;
+              top: calc(50% - 10px);
+            }
+            &:nth-child(2) {
+              width: 50px;
+              top: calc(50% - 10px);
+              transform: rotate(45deg);
+            }
+            &:nth-child(3) {
+              width: 50px;
+              top: calc(50% - 10px);
+              transform: rotate(45deg);
+            }
           }
         }
         span {
