ui stock page updates

--- a/ui/src/app/components/main/chart/chart.component.html
+++ b/ui/src/app/components/main/chart/chart.component.html
@@ -23,8 +23,8 @@
             <span></span>
           </div>
         </div>
-        <span class="take">take</span>
-        <span class="look">a look</span>
+        <span class="take">take a</span>
+        <span class="look">look</span>
       </div>
     </div>
   </div>
