--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -142,6 +142,14 @@
             .label {
               font-size: 14px;
             }
+            &.select {
+              top: auto;
+              position: relative;
+              width: 40px;
+              height: 40px;
+              padding: 0;
+              margin: 0;
+            }
             &.ppp50 {
               left: 10px;
             }
@@ -154,14 +162,6 @@
             &.ppp420 {
               left: 190px;
             }
-          }
-          .select {
-            cursor: pointer;
-            position: relative;
-            width: 40px;
-            height: 40px;
-            padding: 0;
-            margin: 0;
           }
         }
         .paginator {
@@ -180,6 +180,7 @@
             width: 30px;
             height: 30px;
             background: #4D4D4D;
+            padding: 0;
             margin: 0 5px;
             outline: none;
             border: none;
@@ -201,7 +202,7 @@
                 width: 10px;
                 height: 2px;
                 top: 50%;
-                left: calc(50% - 3px);
+                left: calc(50% - 5px);
                 border-radius: 2px;
                 background: lighten($dark, 10%);
                 &:nth-child(1) {
