--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -71,7 +71,7 @@
             position: absolute;
             right: 20px;
             font: 900 22px/24px $fontMain;
-            color: $background;
+            color: #2f2f2f;
           }
           .album-size {
             position: absolute;
@@ -98,7 +98,6 @@
           height: 100%;
           top: 0;
           left: 0;
-          box-shadow: inset 0 0 20px #272727, inset 0 0 10px rgba(255, 255, 255, 0.05);
           .preview-pix {
             width: 20%;
             height: 100%;
@@ -121,6 +120,7 @@
             left: 0;
             backdrop-filter: blur(1px);
             background: lighten($background, 10%);
+            box-shadow: inset 0 0 20px #272727, inset 0 0 50px hsla(0, 0%, 12%, 1);
           }
         }
         .arrow {
@@ -135,7 +135,7 @@
             display: block;
             position: absolute;
             border-radius: 20px;
-            background: $background;
+            background: #2f2f2f;
             &:nth-child(1) {
               width: 100%;
               top: calc(50% - 20px);
@@ -158,7 +158,7 @@
           display: block;
           position: absolute;
           font: 900 142px/166px $fontMain;
-          color: $background;
+          color: #2f2f2f;
           &.take {
             top: calc(50% - 25px);
             right: 200px;
