--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 
   <div class="main">
-    <div class="user-info" *ngIf="!selfStock">
+    <div class="user-info">
       <div class="user-info-avatar">
         <a class="user-avatar" href="{{href}}" target="_blank" rel="noopener noreferrer">
           <img class="pix-img" src="{{user.avatar}}"/>
