--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -26,75 +26,78 @@
         </div>
       </div>
       <div class="bottom-panel">
-        <div class="pix-per-page">
-          <a class="button select"  (click)="pppClickHandler()">
-            <div class="label">{{pixPerPage}}</div>
-          </a>
-          <a class="button ppp50" (click)="pixPerPageHandler(50)" *ngIf="pppMode">
+        <div class="bottom-panel-popup items-per-page" *ngIf="pppMode" [@slideUpDown]>
+          <a class="button" (click)="pixPerPageHandler(50)">
             <div class="label">50</div>
           </a>
-          <a class="button ppp100" (click)="pixPerPageHandler(100)" *ngIf="pppMode">
+          <a class="button" (click)="pixPerPageHandler(100)">
             <div class="label">100</div>
           </a>
-          <a class="button ppp200" (click)="pixPerPageHandler(200)" *ngIf="pppMode">
+          <a class="button" (click)="pixPerPageHandler(200)">
             <div class="label">200</div>
           </a>
-          <a class="button ppp420" (click)="pixPerPageHandler(420)" *ngIf="pppMode">
+          <a class="button" (click)="pixPerPageHandler(420)">
             <div class="label">420</div>
           </a>
         </div>
-
-        <div class="paginator">
-          <button class="btn-page backward" (click)="paginatorClickHandler('backward')">
-            <span class="icon">
-              <span></span>
-              <span></span>
-            </span>
-          </button>
-          <button class="btn-page backward" (click)="paginatorClickHandler('firstPage')">
-            <span class="icon">
-              <span></span>
-              <span></span>
-            </span>
-            <span class="icon">
-              <span></span>
-              <span></span>
-            </span>
-          </button>
-          <span class="pages"><span class="page-current">{{paginatorPageCurrent}}</span> of <span class="page-total">{{paginatorPageTotal}}</span></span>
-          <button class="btn-page forward" (click)="paginatorClickHandler('lastPage')">
-            <span class="icon">
-              <span></span>
-              <span></span>
-            </span>
-            <span class="icon">
-              <span></span>
-              <span></span>
-            </span>
-          </button>
-          <button class="btn-page forward" (click)="paginatorClickHandler('forward')">
-            <span class="icon">
-              <span></span>
-              <span></span>
-            </span>
-          </button>
-        </div>
-
-        <div class="download">
-          <a class="select" (click)="selectClickHandler()"></a>
-          <a class="button selected" *ngIf="selectMode">
+        <div class="bottom-panel-popup downloads" *ngIf="selectMode" [@slideUpDown]>
+          <a class="button selected">
             <div class="deselect" *ngIf="selectedAmount > 0" (click)="deselectClickHandler()">
               <span></span>
               <span></span>
             </div>
             <div class="label">{{selectedAmount}} selected</div>
           </a>
-          <a class="button download" href="/api/v1/download/pixcollector.zip" download *ngIf="selectMode">
+          <a class="button download" href="/api/v1/download/pixcollector.zip" download>
             <div class="label">Download</div>
           </a>
-          <a class="button select-all" (click)="selectAll()" *ngIf="selectMode">
+          <a class="button select-all" (click)="selectAll()">
             <div class="label"><span *ngIf="!selectAllPix">Select all</span><span *ngIf="selectAllPix">Unselect</span></div>
           </a>
+        </div>
+
+        <div class="bottom-panel-wrapper">
+          <div class="pix-per-page">
+            <a class="button select"  (click)="pppClickHandler()"><div class="label">{{pixPerPage}}</div></a>
+          </div>
+          <div class="paginator">
+            <button class="btn-page backward" (click)="paginatorClickHandler('backward')">
+            <span class="icon">
+              <span></span>
+              <span></span>
+            </span>
+            </button>
+            <button class="btn-page backward" (click)="paginatorClickHandler('firstPage')">
+            <span class="icon">
+              <span></span>
+              <span></span>
+            </span>
+              <span class="icon">
+              <span></span>
+              <span></span>
+            </span>
+            </button>
+            <span class="pages"><span class="page-current">{{paginatorPageCurrent}}</span> of <span class="page-total">{{paginatorPageTotal}}</span></span>
+            <button class="btn-page forward" (click)="paginatorClickHandler('lastPage')">
+            <span class="icon">
+              <span></span>
+              <span></span>
+            </span>
+              <span class="icon">
+              <span></span>
+              <span></span>
+            </span>
+            </button>
+            <button class="btn-page forward" (click)="paginatorClickHandler('forward')">
+            <span class="icon">
+              <span></span>
+              <span></span>
+            </span>
+            </button>
+          </div>
+          <div class="download">
+            <a class="select" (click)="selectClickHandler()"></a>
+          </div>
         </div>
       </div>
     </div>
