--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -58,7 +58,7 @@
 
         <div class="bottom-panel-wrapper">
           <div class="pix-per-page">
-            <a class="button select"  (click)="pppClickHandler()"><div class="label">{{pixPerPage}}</div></a>
+            <a class="button select" [ngClass]="{active:pppMode}"  (click)="pppClickHandler()"><div class="label">{{pixPerPage}}</div></a>
           </div>
           <div class="paginator">
             <button class="btn-page backward" (click)="paginatorClickHandler('backward')">
@@ -96,7 +96,7 @@
             </button>
           </div>
           <div class="download">
-            <a class="select" (click)="selectClickHandler()"></a>
+            <a class="select" [ngClass]="{active:selectMode}" (click)="selectClickHandler()"></a>
           </div>
         </div>
       </div>
